--- a/private/templates/sbnext-common/stats.twig
+++ b/private/templates/sbnext-common/stats.twig
@@ -28,6 +28,12 @@
                             {{ stats.viewcount }}
                         </div>
                     </div>
+                    <div class="col-md-4">
+                        <div class="statbox">
+                            <div class="stat-title">{{ __("Comments") }}</div>
+                            {{ stats.commentcount }}
+                        </div>
+                    </div>
                 </div>
             </div>
         </div>
