--- a/private/templates/monobook-common/index.twig
+++ b/private/templates/monobook-common/index.twig
@@ -41,7 +41,7 @@
 										</td>
 										<td>
 											<a href="/watch.php?v={{ video.video_id }}" class="{{ linkIcon }}">{{ video.title }}</a>
-											<p>by {{ userlink(video, 'u_') }}</br><small>{{ video.views }} views - {{ video.time | relative_time }}</small></p>
+											<p>by {{ userlink(video, 'u_') }}</br><small>{{ video.views }} views • {{ video.time | relative_time }}</small></p>
 										</td>
 									</tr>
 								</tbody>
