upload form on monobook

--- a/private/templates/monobook-common/_layout.twig
+++ b/private/templates/monobook-common/_layout.twig
@@ -37,10 +37,7 @@
 						<ul>
 						{% if log %}
 							<li id="pt-userpage"><a href="/user.php?name={{ userdata.name }}" title="Your user page [alt-shift-.]" accesskey=".">{{ userdata.name }}</a></li>
-							<li id="pt-mytalk"><a href="/index.php/User_talk:THIS_IS_DUMMY_USERNAME" class="new" title="Your talk page [alt-shift-n]" accesskey="n">Talk</a></li>
-							<li id="pt-preferences"><a href="/index.php/Special:Preferences" title="Your preferences">Preferences</a></li>
-							<li id="pt-watchlist"><a href="/index.php/Special:Watchlist" title="A list of pages you are monitoring for changes [alt-shift-l]" accesskey="l">Watchlist</a></li>
-							<li id="pt-mycontris"><a href="/index.php/Special:Contributions/THIS_IS_DUMMY_USERNAME" title="A list of your contributions [alt-shift-y]" accesskey="y">Contributions</a></li>
+							<li id="pt-upload"><a href="/upload.php" title="Upload [alt-shift-u]" accesskey="u">Upload</a></li>
 							<li id="pt-logout"><a href="/logout.php" title="Log out">Log out</a></li>
 						{% else %}
 							<li id="pt-login"><a href="/login.php" title="You are encouraged to log in; however, it is not mandatory [alt-shift-o]" accesskey="o">Log in / create account</a></li>
@@ -65,7 +62,6 @@
 					<div id="searchBody" class="pBody">
 						<form action="/search.php" id="searchform">
 							<input type="search" name="tags" title="Search Qobo [alt-shift-f]" accesskey="f" id="searchInput">
-							<input type="submit" name="go" value="Go" title="Go to a page with this exact name if exists" id="searchGoButton" class="searchButton">&nbsp;
 							<input type="submit" name="fulltext" value="Search" title="Search the pages for this text" id="mw-searchButton" class="searchButton">
 						</form>
 					</div>
