--- a/public/assets/mediawiki/common/feed.css
+++ b/public/assets/mediawiki/common/feed.css
@@ -11,85 +11,136 @@ Compatibility:
 
 */
 
-/* RSS: */ rss, channel, title, link, description, language, generator, lastBuildDate, item, pubDate, author, comments, creator,
-/* Atom: */ feed, id, modified, tagline, entry, issued, created, updated, summary, comment {
-	display: block;
+/* RSS: */
+rss, channel, title, link, description, language, generator, lastBuildDate, item, pubDate, author, comments, creator,
+    /* Atom: */
+feed, id, modified, tagline, entry, issued, created, updated, summary, comment {
+    display: block;
 }
 
 rss, feed {
-	background: white;
-	color: black;
-	margin: 1em;
-	font-family: "Verdana", "Tahoma", "Arial", "Helvetica", sans-serif;
-	line-height: 1.5em;
-	font-size: 76%;
+    background: white;
+    color: black;
+    margin: 1em;
+    font-family: "Verdana", "Tahoma", "Arial", "Helvetica", sans-serif;
+    line-height: 1.5em;
+    font-size: 76%;
 }
 
 rss:before {
-	content: "This RSS feed is meant to be read in a syndicated news reader, and isn't ideal for a web browser.";
+    content: "This RSS feed is meant to be read in a syndicated news reader, and isn't ideal for a web browser.";
 }
 
 feed:before {
-	content: "This Atom feed is meant to be read in a syndicated news reader, and isn't ideal for a web browser.";
+    content: "This Atom feed is meant to be read in a syndicated news reader, and isn't ideal for a web browser.";
 }
+
 rss:before, feed:before {
-	color: red;
-	text-align: center;
-	line-height: 2em;
+    color: red;
+    text-align: center;
+    line-height: 2em;
 }
 
-channel>title,
-item>title,
-feed>title,
-entry>title {
-	font-weight: bold;
-	border-bottom: solid 1px #aaa;
-	margin-left: -0.5em;
+channel > title,
+item > title,
+feed > title,
+entry > title {
+    font-weight: bold;
+    border-bottom: solid 1px #aaa;
+    margin-left: -0.5em;
 }
-channel>title, feed>title {
-	font-size: larger;
+
+channel > title, feed > title {
+    font-size: larger;
 }
-item>title, entry>title {
-	font-size: large;
+
+item > title, entry > title {
+    font-size: large;
 }
+
 item, entry {
-	margin-top: 1em;
-	margin-left: 2em;
+    margin-top: 1em;
+    margin-left: 2em;
 }
 
-item>description, entry>summary {
-	white-space: pre;
-	overflow: auto;
-	background: #f8f8ff;
+item > description, entry > summary {
+    white-space: pre;
+    overflow: auto;
+    background: #f8f8ff;
 }
 
-pubDate:before { content: "Date: " }
-link:before { content: "Link: " }
-author:before, creator:before { content: "Author: " }
-description:before { content: "Description: " }
-id:before { content: "Id: " }
+pubDate:before {
+    content: "Date: "
+}
 
-generator:before { content: "Generator: " }
-language:before { content: "Language: " }
-lastBuildDate:before { content: "Updated: " }
-comments:before { content: "Comments page: " }
+link:before {
+    content: "Link: "
+}
 
-tagline:before { content: "Tagline: " }
-issued:before { content: "Issued: " }
-created:before { content: "Created: " }
-modified:before { content: "Modified: " }
-updated:before { content: "Updated: " }
-summary:before { content: "Summary: " }
-comment:before { content: "Comment: " }
+author:before, creator:before {
+    content: "Author: "
+}
+
+description:before {
+    content: "Description: "
+}
+
+id:before {
+    content: "Id: "
+}
+
+generator:before {
+    content: "Generator: "
+}
+
+language:before {
+    content: "Language: "
+}
+
+lastBuildDate:before {
+    content: "Updated: "
+}
+
+comments:before {
+    content: "Comments page: "
+}
+
+tagline:before {
+    content: "Tagline: "
+}
+
+issued:before {
+    content: "Issued: "
+}
+
+created:before {
+    content: "Created: "
+}
+
+modified:before {
+    content: "Modified: "
+}
+
+updated:before {
+    content: "Updated: "
+}
+
+summary:before {
+    content: "Summary: "
+}
+
+comment:before {
+    content: "Comment: "
+}
 
 pubDate:before, link:before, author:before, description:before,
 language:before, generator:before, lastBuildDate:before, comments:before,
 tagline:before, issued:before, created:before, modified:before,
 summary:before, comment:before, creator:before, id:before, updated:before {
-	color: #224;
-	font-weight: bold;
+    color: #224;
+    font-weight: bold;
 }
 
 feed link:after {
-	content: attr(href);
+    content: attr(href);
 }
