replace mentions of sb with qobo (especially on 111)

--- a/private/templates/layout111-common/admin.twig
+++ b/private/templates/layout111-common/admin.twig
@@ -9,7 +9,7 @@
                 Admin panel
             </h1>
             <p class="subtitle">
-                Currently running squareBracket version {{ version }} (commit {{ git_commit() }})
+                Currently running Qobo version {{ version }} (commit {{ git_commit() }})
                 on {{ operating_system() }}.
             </p>
         </div>
