--- a/private/templates/layout111-common/_layout_account.twig
+++ b/private/templates/layout111-common/_layout_account.twig
@@ -3,7 +3,7 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>{% block title %}Title{% endblock %} - squareBracket</title>
+    <title>{% block title %}Title{% endblock %} - Qobo</title>
     <link rel="stylesheet" href="/assets/project111/css/style.css">
     <script src="https://cdn.jsdelivr.net/npm/js-cookie@rc/dist/js.cookie.min.js"></script>
     <script src="https://code.jquery.com/jquery-3.6.0.js"
