--- a/private/templates/layout111-common/index.twig
+++ b/private/templates/layout111-common/index.twig
@@ -4,7 +4,7 @@
     <div class="hero-body is-align-items-baseline">
         <div class="columns is-vcentered">
             <div class="column is-3">
-                <img src="assets/logo-wordmark-dark.png" alt="squareBracket">
+                <img src="assets/logo-wordmark-dark.png" alt="Qobo">
             </div>
             <div class="column is-one-third">
                 <p class="control">
