--- a/private/templates/layout111-common/stats.twig
+++ b/private/templates/layout111-common/stats.twig
@@ -7,7 +7,7 @@
                 Statistics
             </h1>
             <p class="subtitle">
-                About this instance of squareBracket
+                About this instance of Qobo
             </p>
         </div>
     </section>
@@ -32,6 +32,12 @@
                     <div>
                         <p class="heading">Views</p>
                         <p class="title">{{ stats.viewcount }}</p>
+                    </div>
+                </div>
+                <div class="level-item has-text-centered">
+                    <div>
+                        <p class="heading">Comments</p>
+                        <p class="title">{{ stats.commentcount }}</p>
                     </div>
                 </div>
             </nav>
