--- a/private/templates/layout111-common/upload.twig
+++ b/private/templates/layout111-common/upload.twig
@@ -19,7 +19,7 @@
                     <div class="field-body">
                         <div class="field">
                             <div class="control">
-                                <input class="input" name="title" id="title" placeholder="e.g. Hello, squareBracket!">
+                                <input class="input" name="title" id="title" placeholder="e.g. Hello, Qobo!">
                             </div>
                         </div>
                     </div>
