--- a/private/templates/sbnext-common/admin.twig
+++ b/private/templates/sbnext-common/admin.twig
@@ -4,7 +4,7 @@
 
 	{% block content %}
         <h1>Admin panel</h1>
-        <p>{{ __("Currently running squareBracket version %s (commit %s) on %s.", [version, git_commit(), operating_system()]) }}</p>
+        <p>{{ __("Currently running Qobo version %s (commit %s) on %s.", [version, git_commit(), operating_system()]) }}</p>
         <table style="width: 100%;">
             <tr>
                 <td class="nb" style="width:33%; vertical-align:top;">
