--- a/private/templates/sbnext-desktop/index.twig
+++ b/private/templates/sbnext-desktop/index.twig
@@ -37,9 +37,9 @@
                         <h3 style="padding:0;margin:0;">{{ __("Again.") }}</h3>
                     </div>
                     <div class="col-md-6">
-                        <a class="button button-neutral button-large"
+                        <a class="button button-primary button-large"
                            href="register.php">{{ __("Get started") }} {{ icon('caret-right-fill', 16) }}</a><br><br>
-                        <big>{{ __("Already have an account?") }} <a class="button button-neutral"
+                        <big>{{ __("Already have an account?") }} <a class="button button-primary"
                                                                      href="login.php">{{ __("Sign in") }}</a></big>
                     </div>
                 {% endif %}
