--- a/private/scss-finalium/_buttons.scss
+++ b/private/scss-finalium/_buttons.scss
@@ -2,101 +2,103 @@
   @return if(lightness($color) < $threshold, $light, $dark)
 }
 
+$button-padding: 6px 10px;
+
 .button {
   border-radius: 3px;
   color: white;
-  padding: 7px 12px;
+  padding: $button-padding;
   margin: 2px 0;
   display: inline-block;
-  box-shadow: inset 0 1px 0 rgba(255, 255, 255, 0.2), 0 1px 2px rgba(0, 0, 0, 0.05);
   cursor: pointer;
 
   &:hover {
-    background-color: #dddddd;
+	background-color: #dddddd;
   }
 
   &.sel {
-    background-color: #ccccff;
+	background-color: #ccccff;
 
-    &:hover {
-      background-color: #bbbbee;
-    }
+	&:hover {
+	  background-color: #bbbbee;
+	}
   }
 }
 
 // uploader "file selection" button, implemented in the hackiest way possible.
 input[type=file]::file-selector-button, {
-  border-radius: 3px;
   color: black;
-  padding: 7px 12px;
+  padding: $button-padding;
   margin: 2px 7px 6px 0px;
   display: inline-block;
-  box-shadow: inset 0 1px 0 rgba(255, 255, 255, 0.2), 0 1px 2px rgba(0, 0, 0, 0.05);
   cursor: pointer;
   border: 1px solid darken($gray-400, 2.25%);
-  @include gradient-y($start-color: lighten($gray-200, 4.5%), $end-color: darken($gray-200, 0.5%));
+  background-color: lighten($gray-200, 2.5%);
+  @include gradient-y($start-color: lighten($gray-200, 2.5%), $end-color: lighten($gray-200, 1.5%));
   font-family: $font;
 
   &:hover {
-    @include gradient-y($start-color: lighten($gray-200, 7.5%), $end-color: lighten($gray-200, 1.5%));
+	background-color: lighten($gray-200, 8.5%);
+	@include gradient-y($start-color: lighten($gray-200, 8.5%), $end-color: lighten($gray-200, 1.5%));
   }
 
   &.sel {
-    @include gradient-y($start-color: darken($gray-200, 7%), $end-color: darken($gray-200, 15%));
+	background-color: darken($gray-200, 10.5%);
+	@include gradient-y($start-color: lighten($gray-200, 10.5%), $end-color: lighten($gray-200, 5.5%));
   }
 }
 
 .button-large {
-  padding: 8px 12px;
   border-radius: 5px;
-  font-size: 13px;
+  padding: 8px 12px;
+  font-size: 17px;
 }
 
 .button-small {
-  padding: 5px 13px;
   border-radius: 2px;
+  padding: 5px 13px;
   height: 26px;
   font-size: 11px;
 }
 
 @each $state, $value in $theme-colors {
   .button-#{$state} {
-    border: 1px solid darken($value, 7.5%);
-    background-color: lighten($value, 1.5%);
-    @include gradient-y($start-color: lighten($value, 4.5%), $end-color: darken($value, 0.5%));
-    color: contrast-color($value, $dark, $light) !important;
+	border: 1px solid darken($value, 7.5%);
+	background-color: lighten($value, 2.5%);
+	@include gradient-y($start-color: lighten($value, 2.5%), $end-color: lighten($value, 1.5%));
+	color: contrast-color($value, $dark, $light) !important;
   }
 
   .button-#{$state}:hover {
-    @include gradient-y($start-color: lighten($value, 7.5%), $end-color: lighten($value, 1.5%));
-    background-color: lighten($value, 3.5%);
-    border: 1px solid darken($value, 1%);
-    color: contrast-color($value, $dark, $light) !important;
+	background-color: lighten($value, 8.5%);
+	@include gradient-y($start-color: lighten($value, 8.5%), $end-color: lighten($value, 1.5%));
+	border: 1px solid darken($value, 1%);
+	color: contrast-color($value, $dark, $light) !important;
   }
 
   .button-#{$state}:active {
-    border: 1px solid darken($value, 10%);
-    @include gradient-y($start-color: darken($value, 7%), $end-color: darken($value, 15%));
-    background-color: lighten($value, 10%);
-    color: contrast-color($value, $dark, $light) !important;
+	border: 1px solid darken($value, 7.5%);
+	background-color: lighten($value, 10.5%);
+	@include gradient-y($start-color: lighten($value, 10.5%), $end-color: lighten($value, 5.5%));
+	color: contrast-color($value, $dark, $light) !important;
   }
 
   .button-#{$state}-invis {
-    border: 1px solid #0000;
-    background: none;
-    box-shadow: none;
-    color: contrast-color($value, $dark, $light) !important;
+	border: 1px solid #0000;
+	background: none;
+	box-shadow: none;
+	color: contrast-color($value, $dark, $light) !important;
   }
 
   .button-#{$state}-invis:hover {
-    @include gradient-y($start-color: lighten($value, 5%), $end-color: darken($value, 3.5%));
-    border: 1px solid darken($value, 1%);
-    color: contrast-color($value, $dark, $light) !important;
+	@include gradient-y($start-color: lighten($value, 8.5%), $end-color: lighten($value, 1.5%));
+	border: 1px solid darken($value, 1%);
+	color: contrast-color($value, $dark, $light) !important;
   }
 
   .button-#{$state}-invis:active {
-    border: 1px solid darken($value, 10%);
-    @include gradient-y($start-color: darken($value, 7%), $end-color: darken($value, 15%));
-    color: contrast-color($value, $dark, $light) !important;
+	@include gradient-y($start-color: lighten($value, 10.5%), $end-color: lighten($value, 5.5%));
+	border: 1px solid darken($value, 10%);
+	color: contrast-color($value, $dark, $light) !important;
   }
 }
