--- a/private/scss-finalium/_variables.scss
+++ b/private/scss-finalium/_variables.scss
@@ -5,7 +5,7 @@ $white: #FCFCFC;
 $black: #000;
 $indigo: #4d27e6;
 $purple: #7942c1;
-$pink: #eb44b0;
+$pink: #ff23b1;
 $orange: #ff9900;
 $yellow: #f5cc14;
 $cyan: #1778b8;
@@ -53,7 +53,7 @@ $colors: (
         "gray-dark": $gray-800
 );
 
-$primary: $blue;
+$primary: $pink;
 $secondary: $gray-100;
 $success: $green;
 $info: $cyan;
