--- a/private/scss-finalium/style.scss
+++ b/private/scss-finalium/style.scss
@@ -48,7 +48,7 @@ body {
 
 a:link,
 a:visited {
-  color: $teal;
+  color: $pink;
   text-decoration: none;
   word-break: break-all;
 }
@@ -200,7 +200,7 @@ menu, ol, ul, li {
 
 .main-content {
   background: rgb(24, 0, 36);
-  background: linear-gradient(90deg, rgba(24, 0, 36, 1) 0%, rgba(95, 9, 121, 1) 35%, rgba(115, 21, 129, 1) 100%);
+  background: linear-gradient(90deg, rgba(24, 0, 36, 1) 0%, rgba(100, 9, 121, 1) 35%, rgba(200, 21, 200, 1) 100%);
   color: white;
   margin: -48px 0 0;
   padding: 75px 0px 20px;
