--- a/private/templates/sbnext-common/_error.twig
+++ b/private/templates/sbnext-common/_error.twig
@@ -1,10 +1,17 @@
 {% extends "_layout.twig" %}
 
-{% block title %}{% endblock %}
+{% block title %}{{ err_message }}{% endblock %}
 
 	{% block content %}
-        <div class="bg-dark" style="max-width:700px;margin:auto;padding:20px;padding-bottom:100px;color:white;">
-            <h2>{{ err_message }}</h2>
-            <div style="text-align:center;margin:auto"><img src="../assets/logo_monochrome.png" alt="squareBracket" style="max-width:150px;"></div>
-        </div>
+	<div class="card card-body-fat">
+		<div class="grid">
+			<div class="col-md-8">
+				<h1>{{ err_code }}</h1>
+				<p>{{ err_message }}</p>
+			</div>
+			<div class="col-md-8 right">
+				<img src="../assets/logo.png" alt="Qobo" style="max-width:150px;">
+			</div>
+		</div>
+	</div>
     {% endblock %}
